--- a/CustomerNumberDonwloadTool/www/css/index.css
+++ b/CustomerNumberDonwloadTool/www/css/index.css
@@ -29,17 +29,8 @@ dd {
     background: rgba(0, 0, 0, 0.4);
 }
 
-.nav {
-    width: 50px;
-    float: left;
-}
-
-.sidebar-nav {
-    height: 100%;
-}
-
 .main {
-    width: 700px;
+    width: 690px;
     float: left;
     overflow: hidden;
 }
@@ -63,8 +54,7 @@ dd {
 }
 
 .img-device {
-    margin-top: 8px;
-    margin-left: 3px;
+    margin-top: 10px;
     border-radius: 50%;
     width: 44px;
     height: 44px;
@@ -105,76 +95,72 @@ dd {
     padding: 5px 10px;
 }
 
-.sidebar-nav {
-    background: #212529;
+.nav {
+    width: 60px;
+    float: left;
+    background-color: #3a3f51;
+    text-align: center;
+    height: 100%;
 }
 
-.sidebar-nav ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    background: #343a40;
+.nav ul {
+    margin-top: 50px;
 }
 
-.sidebar-nav .metismenu {
-    background: #212529;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+.nav ul li {
+    height: 50px;
+    line-height: 50px;
 }
 
-.sidebar-nav .metismenu li + li {
-    margin-top: 5px;
+.nav ul li:hover {
+    background-color: #32374a;
 }
 
-.sidebar-nav .metismenu li:first-child {
-    margin-top: 5px;
+.nav ul li a {
+    cursor: default;
 }
 
-.sidebar-nav .metismenu li:last-child {
-    margin-bottom: 5px;
+.nav ul li i {
+    color: #b4b6bd;
 }
 
-
-.sidebar-nav .metismenu > li {
-    /*-webkit-box-flex: 1;
-    -ms-flex: 1 1 0%;
-    flex: 1 1 0%;*/
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+.nav ul li.menu-item {
     position: relative;
 }
 
-.sidebar-nav .metismenu a {
-    position: relative;
-    display: block;
-    padding: 13px 15px;
-    color: #adb5bd;
-    outline-width: 0;
-    transition: all .3s ease-out;
+.nav ul li.menu-item a {
+    color: #fff;
 }
 
-.sidebar-nav .metismenu ul a {
-    padding: 10px 15px 10px 30px;
+.nav ul li.menu-item.active {
+    background: #32374a;
+    border-left: 2px solid #2083fe;
 }
 
-.sidebar-nav .metismenu ul ul a {
-    padding: 10px 15px 10px 45px;
+.nav .menu-item-tip:before {
+    content: '';
+    position: absolute;
+    left: -6px;
+    top: 50%;
+    margin-top: -6px;
+    border-width: 6px;
+    border-color: rgba(36, 48, 60, 0.85);
+    border-left-width: 0;
+    border-style: dashed;
+    border-right-style: solid;
+    border-top-color: transparent;
+    border-bottom-color: transparent;
 }
 
-.sidebar-nav .metismenu a:hover,
-.sidebar-nav .metismenu a:focus,
-.sidebar-nav .metismenu a:active {
-    color: #f8f9fa;
-    text-decoration: none;
-    background: #0b7285;
+.nav .menu-item-tip {
+    height: 40px;
+    line-height: 40px;
+    width: 80px;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    display: none;
+    color: #fff;
+    left: 70px;
+    background: rgba(36, 48, 60, 0.85);
 }
